# pi-lane

./: AGENT.md  AI_CONTEXT.md  LICENSE  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/pilane/: __init__.py  config.py  database.py  main.py  schemas.py  websocket.py
backend/src/pilane/api/: cars.py  races.py  tracks.py  users.py  websocket_routes.py
backend/src/pilane/race/: __init__.py  engine.py
backend/src/pilane/simulation/: simulator.py
docs/: carrera.md
docs/planning/: findings.md  progress.md  task_plan.md
frontend/: README.md  package.json  pnpm-lock.yaml  quasar.config.ts
frontend/src/components/: NavItem.vue
frontend/src/components/track/: CarSvg.vue  TileRenderer.vue  TrackEditor.vue  index.ts  track.utils.ts
frontend/src/css/: app.scss
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: CarsPage.vue  HomePage.vue  LeaderboardPage.vue  RacePage.vue  SettingsPage.vue  TrackEditorPage.vue  UsersPage.vue
frontend/src/router/: routes.ts
frontend/src/stores/: track-editor-store.ts
frontend/src/types/: track.types.ts
