[project]
name = "pilane"
version = "0.1.0"
description = "Slot car racing control system for Carrera analog tracks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tinydb>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]
rpi = [
    "RPi.GPIO>=0.7.0",
    "pigpio>=1.78",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pilane"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
